k8s-manifests/network-policies/allow-kafka-to-zookeeper.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafka-to-zookeeper
  namespace: uber-service
spec:
  podSelector:
    matchLabels:
      app: zookeeper
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - protocol: TCP
          port: 2181
  policyTypes:
    - Ingress
