k8s-manifests/network-policies/allow-monitoring-to-kafka.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-to-kafka
  namespace: uber-service
spec:
  podSelector:
    matchLabels:
      app: kafka
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
      ports:
        - protocol: TCP
          port: 9092
  policyTypes:
    - Ingress
