k8s-manifests/network-policies/allow-producer-to-potsgres.yaml
# k8s-manifests/network-policies/allow-producer-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-producer-to-db
  namespace: uber-service
spec:
  podSelector:
    matchLabels:
      app: postgres
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kafka-producer
      ports:
        - protocol: TCP
          port: 5432
  policyTypes:
    - Ingress
