k8s-manifests/network-policies/allow-schema-registry-to-kafka.yaml
# Allows the Schema Registry to connect to Kafka brokers on port 9092.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-schema-registry-to-kafka
  namespace: uber-service
spec:
  podSelector:
    matchLabels:
      app: kafka
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: schema-registry
      ports:
        - protocol: TCP
          port: 9092
  policyTypes:
    - Ingress
